--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Página de bienes raices donde podrá encontrar casas y departamentos de lujo en venta.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,500,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Poiret+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
 
@@ -31,25 +33,25 @@
     </header>
 
     <section class="contenedor seccion">
-            <h2 class="fw300 centrartexto">Más Sobre Nosotros</h2>
+            <h2 class="centrartexto">Más Sobre Nosotros</h2>
             <div class="iconos-nosotros">
                 <div class="iconos">
                     <img src="img/icono1.svg" alt="Icono Seguridad">
-                    <h3>Seguridad</h3>
+                    <h3 >Seguridad</h3>
                     <p>Rerum dicta voluptas modi blanditiis animi! Minima fugiat sit quisquam.
                     Ratione aperiam molestiae est explicabo temporibus dolores numquam recusandae tempore esse eius!</p>
                 </div>
 
                 <div class="iconos">
                     <img src="img/icono2.svg" alt="Icono el Mejor Precio">
-                    <h3>El Mejor Precio</h3>
+                    <h3 >El Mejor Precio</h3>
                     <p>Rerum dicta voluptas modi blanditiis animi! Minima fugiat sit quisquam.
                     Ratione aperiam molestiae est explicabo temporibus dolores numquam recusandae tempore esse eius!</p>
                 </div>
 
                 <div class="iconos">
                     <img src="img/icono3.svg" alt="Icono a Tiempo">
-                    <h3>A Tiempo</h3>
+                    <h3 >A Tiempo</h3>
                     <p>Rerum dicta voluptas modi blanditiis animi! Minima fugiat sit quisquam.
                     Ratione aperiam molestiae est explicabo temporibus dolores numquam recusandae tempore esse eius!</p>
                 </div>
@@ -57,12 +59,12 @@
     </section>
 
     <main class="contenedor seccion">
-        <h2 class="fw300 centrartexto">Casas y Departamentos en Venta</h2>
+        <h2 class="centrartexto">Casas y Departamentos en Venta</h2>
         <div class="contenedor-anuncios">
             <div class="anuncios">
                 <img src="img/anuncio1.jpg" alt="Casa de Lujo en el Lago">
                 <div class="contenido-anuncio">
-                    <h3>Casa de Lujo en el Lago</h3>
+                    <h3 class="fw300">Casa de Lujo en el Lago</h3>
                     <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
                     <p class="precio">$3,000,000</p>
                     <ul class="iconos-caracteristicas-casas">
@@ -86,7 +88,7 @@
             <div class="anuncios">
                 <img src="img/anuncio2.jpg" alt="Casa de terminados de Lujo">
                 <div class="contenido-anuncio">
-                    <h3>Casa terminados de Lujo</h3>
+                    <h3 class="fw300">Casa terminados de Lujo</h3>
                     <p>Casa con diseño moderno, así como tecnología inteligente y amueblada</p>
                     <p class="precio">$2,000,000</p>
                     <ul class="iconos-caracteristicas-casas">
@@ -110,7 +112,7 @@
             <div class="anuncios">
                 <img src="img/anuncio3.jpg" alt="Casa con alberca">
                 <div class="contenido-anuncio">
-                    <h3>Casa con alberca</h3>
+                    <h3 class="fw300">Casa con alberca</h3>
                     <p>Casa con alberca y acabados de lujo en la ciudad, excelente oportunidad</p>
                     <p class="precio">$3,000,000</p>
                     <ul class="iconos-caracteristicas-casas">
@@ -178,7 +180,7 @@
             <h3 class="centrartexto fw300">Testimoniales</h3>
             <div class="testimonial">
                 <blockquote>El personal se comporto de una excelente forma, muy buena atención y la casa que me ofrecieron
-                    cumple con todas mis expectativas
+                    cumple con todas mis expectativas.
                 </blockquote>
                 <p>- Mauricio González</p>
             </div>
@@ -193,7 +195,7 @@
                 <a href="blog.html">Blog</a>
                 <a href="contacto.html">Contacto</a>
             </nav>
-            <p class="copyright">Copyright &copy; 2020 </p>
+            <p class="copyright">Copyright &copy; 2022 </p>
         </div>
     </footer>
 </body>
