--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header-sitio inicio">
         <div class="contenedor separador-header">
             <div class="barra">
-                <a href="/">
+                <a href="/BienesRaices">
                     <img src="img/logo.svg" alt="Logotipo de bienes raíces">
                 </a>
                 <nav class="navegacion">
@@ -69,15 +69,15 @@
                     <p class="precio">$3,000,000</p>
                     <ul class="iconos-caracteristicas-casas">
                         <li>
-                            <img src="/img/icono_wc.svg" alt="icono wc">
+                            <img src="img/icono_wc.svg" alt="icono wc">
                             <p>5</p>
                         </li>
                         <li>
-                            <img src="/img/icono_estacionamiento.svg" alt="icono autos">
+                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
                             <p>4</p>
                         </li>
                         <li>
-                            <img src="/img/icono_dormitorio.svg" alt="icono dormitorios">
+                            <img src="img/icono_dormitorio.svg" alt="icono dormitorios">
                             <p>4</p>
                         </li>
                     </ul>
@@ -93,15 +93,15 @@
                     <p class="precio">$2,000,000</p>
                     <ul class="iconos-caracteristicas-casas">
                         <li>
-                            <img src="/img/icono_wc.svg" alt="icono wc">
+                            <img src="img/icono_wc.svg" alt="icono wc">
                             <p>5</p>
                         </li>
                         <li>
-                            <img src="/img/icono_estacionamiento.svg" alt="icono autos">
+                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
                             <p>4</p>
                         </li>
                         <li>
-                            <img src="/img/icono_dormitorio.svg" alt="icono dormitorios">
+                            <img src="img/icono_dormitorio.svg" alt="icono dormitorios">
                             <p>4</p>
                         </li>
                     </ul>
@@ -117,15 +117,15 @@
                     <p class="precio">$3,000,000</p>
                     <ul class="iconos-caracteristicas-casas">
                         <li>
-                            <img src="/img/icono_wc.svg" alt="icono wc">
+                            <img src="img/icono_wc.svg" alt="icono wc">
                             <p>5</p>
                         </li>
                         <li>
-                            <img src="/img/icono_estacionamiento.svg" alt="icono autos">
+                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
                             <p>4</p>
                         </li>
                         <li>
-                            <img src="/img/icono_dormitorio.svg" alt="icono dormitorios">
+                            <img src="img/icono_dormitorio.svg" alt="icono dormitorios">
                             <p>4</p>
                         </li>
                     </ul>
