--- a/nosotros.html
+++ b/nosotros.html
@@ -17,7 +17,7 @@
     <header class="header-sitio">
         <div class="contenedor separador-header">
             <div class="barra">
-                <a href="/">
+                <a href="/BienesRaices">
                     <img src="img/logo.svg" alt="Logotipo de bienes raíces">
                 </a>
                 <nav class="navegacion">
@@ -35,7 +35,7 @@
 
         <div class="contenido-nosotros">
             <div class="imagen">
-                <img src="/img/nosotros.jpg" alt="Más sobre nosotros">
+                <img src="img/nosotros.jpg" alt="Más sobre nosotros">
             </div>
             <div class="texto-nosotros">
                 <blockquote>25 años de experiencia</blockquote>
