--- a/anuncios.html
+++ b/anuncios.html
@@ -16,7 +16,7 @@
     <header class="header-sitio">
         <div class="contenedor separador-header">
             <div class="barra">
-                <a href="/">
+                <a href="/BienesRaices">
                     <img src="img/logo.svg" alt="Logotipo de bienes raíces">
                 </a>
                 <nav class="navegacion">
@@ -40,15 +40,15 @@
                     <p class="precio">$3,000,000</p>
                     <ul class="iconos-caracteristicas-casas">
                         <li>
-                            <img src="/img/icono_wc.svg" alt="icono wc">
+                            <img src="img/icono_wc.svg" alt="icono wc">
                             <p>5</p>
                         </li>
                         <li>
-                            <img src="/img/icono_estacionamiento.svg" alt="icono autos">
+                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
                             <p>4</p>
                         </li>
                         <li>
-                            <img src="/img/icono_dormitorio.svg" alt="icono dormitorios">
+                            <img src="img/icono_dormitorio.svg" alt="icono dormitorios">
                             <p>4</p>
                         </li>
                     </ul>
@@ -64,15 +64,15 @@
                     <p class="precio">$2,000,000</p>
                     <ul class="iconos-caracteristicas-casas">
                         <li>
-                            <img src="/img/icono_wc.svg" alt="icono wc">
+                            <img src="img/icono_wc.svg" alt="icono wc">
                             <p>5</p>
                         </li>
                         <li>
-                            <img src="/img/icono_estacionamiento.svg" alt="icono autos">
+                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
                             <p>4</p>
                         </li>
                         <li>
-                            <img src="/img/icono_dormitorio.svg" alt="icono dormitorios">
+                            <img src="img/icono_dormitorio.svg" alt="icono dormitorios">
                             <p>4</p>
                         </li>
                     </ul>
@@ -88,15 +88,15 @@
                     <p class="precio">$3,000,000</p>
                     <ul class="iconos-caracteristicas-casas">
                         <li>
-                            <img src="/img/icono_wc.svg" alt="icono wc">
+                            <img src="img/icono_wc.svg" alt="icono wc">
                             <p>5</p>
                         </li>
                         <li>
-                            <img src="/img/icono_estacionamiento.svg" alt="icono autos">
+                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
                             <p>4</p>
                         </li>
                         <li>
-                            <img src="/img/icono_dormitorio.svg" alt="icono dormitorios">
+                            <img src="img/icono_dormitorio.svg" alt="icono dormitorios">
                             <p>4</p>
                         </li>
                     </ul>
@@ -112,15 +112,15 @@
                     <p class="precio">$7,000,000</p>
                     <ul class="iconos-caracteristicas-casas">
                         <li>
-                            <img src="/img/icono_wc.svg" alt="icono wc">
+                            <img src="img/icono_wc.svg" alt="icono wc">
                             <p>8</p>
                         </li>
                         <li>
-                            <img src="/img/icono_estacionamiento.svg" alt="icono autos">
+                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
                             <p>6</p>
                         </li>
                         <li>
-                            <img src="/img/icono_dormitorio.svg" alt="icono dormitorios">
+                            <img src="img/icono_dormitorio.svg" alt="icono dormitorios">
                             <p>7</p>
                         </li>
                     </ul>
@@ -136,15 +136,15 @@
                     <p class="precio">$6,500,000</p>
                     <ul class="iconos-caracteristicas-casas">
                         <li>
-                            <img src="/img/icono_wc.svg" alt="icono wc">
+                            <img src="img/icono_wc.svg" alt="icono wc">
                             <p>5</p>
                         </li>
                         <li>
-                            <img src="/img/icono_estacionamiento.svg" alt="icono autos">
+                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
                             <p>3</p>
                         </li>
                         <li>
-                            <img src="/img/icono_dormitorio.svg" alt="icono dormitorios">
+                            <img src="img/icono_dormitorio.svg" alt="icono dormitorios">
                             <p>3</p>
                         </li>
                     </ul>
@@ -160,15 +160,15 @@
                     <p class="precio">$7,500,000</p>
                     <ul class="iconos-caracteristicas-casas">
                         <li>
-                            <img src="/img/icono_wc.svg" alt="icono wc">
+                            <img src="img/icono_wc.svg" alt="icono wc">
                             <p>7</p>
                         </li>
                         <li>
-                            <img src="/img/icono_estacionamiento.svg" alt="icono autos">
+                            <img src="img/icono_estacionamiento.svg" alt="icono autos">
                             <p>4</p>
                         </li>
                         <li>
-                            <img src="/img/icono_dormitorio.svg" alt="icono dormitorios">
+                            <img src="img/icono_dormitorio.svg" alt="icono dormitorios">
                             <p>6</p>
                         </li>
                     </ul>
